Implement filter today button. Remove unnecessary log.

--- a/static/index.html
+++ b/static/index.html
@@ -35,8 +35,8 @@
             <div class="filters">
                 <div class="container">
                     <div class="filters__item filters__buttons">
-                        <button type="button" class="filter-btn">Сегодня</button>
-                        <button type="button" class="filter-btn">На неделю</button>
+                        <button type="button" class="filter-btn" id="today-filter">Сегодня</button>
+                        <button type="button" class="filter-btn" id="week-filter">На неделю</button>
                     </div>
                     <div class="filters__item filters__date">
                         <div>
