Implement data-range filter. Add check if data is selected.

--- a/static/index.html
+++ b/static/index.html
@@ -47,6 +47,7 @@
                             <label for="to">До</label>
                             <input type="text" id="date-to" name="to">
                         </div>
+                        <button type="button" class="filters__date-btn" id="date-range-filter">Фильтровать</button>
                     </div>
                     <div class="filters__item filters__status">
                         <input type="checkbox" name="not-completed" id="status-input" />
