Implement date and name sorting

--- a/static/index.html
+++ b/static/index.html
@@ -60,8 +60,8 @@
                     <div class="content__header">
                         <div class="content__today"></div>
                         <div class="content__sort">
-                            <button type="button" class="content__sort-btn">Сортировать по дате</button>
-                            <button type="button" class="content__sort-btn hide">Сортировать по имени</button>
+                            <button type="button" class="content__sort-btn" id="date-sort">Сортировать по дате</button>
+                            <button type="button" class="content__sort-btn hide" id="name-sort">Сортировать по имени</button>
                         </div>
                     </div>
                     <div class="content__list"></div>
