Implement dialog show. Set status checkbox false when using date buttons.

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div id="dialog" title="Basic dialog">
+        <h4 class="dialog__name"></h4>
         <div class="dialog__meta">
             <span class="dialog__date"></span>
             <span class="dialog__status"></span>
