Implement dropping items when typing in search bar.

--- a/static/index.html
+++ b/static/index.html
@@ -25,6 +25,8 @@
            <div class="header__search">
                 <input type="text" name="todo-search" id="todo-search" placeholder="Поиск" />
                 <button type="button" class="header__search-btn">Найти</button>
+
+                <div class="dropdown-items"></div>
            </div> 
            <div class="header__profile">
                 <a class="header__username" href="#">Username</a>
